test/correct/ImportDict2.hs
module ImportDict2 where

data A a = MkA a

y = x
x = 3